url and templating

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="titles ">
-                            <a href="" class="selected">new questions</a>
-                            <a href="#" class="hot">hot questions</a>
+                            <a href="" class="not_selected">new questions</a>
+                            <a href="#" class="hot selected">hot questions</a>
                         </div>
                         <div class="row Question">
                             <div class="col-2 avatar_and_rating">
